# pytorch-app

./: CMakeLists.txt  README.md  app-1.cpp
app-2/: README.md  app-2.cpp
